public/stylesheets/index.css
.title-card {
  margin: 0 auto;
}

#title-text {
  font-weight: 700;
}

#title-btn {
  background-color:transparent;
  border-radius: 12px;
  font-size: 20px;
	border:2px solid #00c0f3;
  cursor:pointer;
  padding: 15px 60px;
  width: 100%;
}

#title-btn:hover {
  background-color:#00c0f3;
  color: #000000;
}

#title-row {
  min-height: 50%;
}


/* MEDIA QUERIES */

@media (min-width: 0) {

  #title-text {
    font-size: 40px;
    line-height: 46px;
    margin-bottom: 0px;
  }

  .title-card {
    width: 270px;
  }

  #title-container {
    margin-top: 10px;
  }

  #title-btn {
    margin-top: 20px;
  }
}

@media (min-width: 576px) {
  #title-text {
    font-size: 54px;
    line-height: 60px;
  }
  .title-card {
    width: 365px;
  }

  #title-container {
    margin-top: 35px;
  }

  #title-btn {
    margin-top: 35px;
  }
}


@media (min-width: 768px) {
  #title-container {
    margin-top: 175px;
  }

  #title-text {
    font-size: 65px;
    line-height: 70px;
  }
  
  .title-card {
    width: 440px;
  }

  #title-btn {
    width:auto;
  }
}

@media (min-width: 992px) {
}

@media (min-width: 1200px) {
  #title-text {
    font-size: 75px;
    line-height: 80px;
  }
  
  .title-card {
    width: 505px;
  }

  #title-btn {
    font-size: 22px;
  }
}

